<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/my_background_fade"
        >
        <RelativeLayout
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"

                    android:text="John Doe"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/text_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_title"
                    android:layout_marginLeft="20dp"
                    android:text="Manager"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="italic"/>
            </LinearLayout>


            <View
                android:id="@+id/duo_view_header_border"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_below="@+id/top_layout"
                android:layout_marginTop="32dp"
                android:background="@android:color/white"/>

            <ScrollView
                android:layout_marginTop="140dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout

                    android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/nav_my_profile"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/my_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/nav_shop_sticker"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/shop_stickers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/nav_sticker_collection"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/sticker_collections"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/nav_puzle"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/puzzle_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/nav_quiz"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/quiz_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/nav_world"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/world_of_wasme_comming_soon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/about"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/about_wasme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/change_lan"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:tint="@android:color/white">

                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:fontFamily="casual"
                            android:text="@string/change_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="50dp"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/logout_btn"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/logout">
                        </ImageView>
                        <TextView
                            android:textSize="15sp"
                            android:id="@+id/logout_btn_txt"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="casual"
                            android:textColor="#FFFF"
                            android:text="@string/log_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>



                </LinearLayout>
            </ScrollView>



        </RelativeLayout>


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>